--- a/server/package.json
+++ b/server/package.json
@@ -7,10 +7,8 @@
     "start": "node dist/index.js",
     "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\""
   },
-  "exports": "./dist/src/index.js",
-  "main": "dist/src/index.js",
-  "module": "dist/src/index.js",
-  "types": "dist/src/index.d.ts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "sideEffects": false,
   "files": [
     "dist",
@@ -20,8 +18,6 @@
     "@types/express": "^4.17.14",
     "@types/node": "^18.11.7",
     "concurrently": "^7.5.0",
-    "nodemon": "^2.0.20",
-    "typescript": "^4.8.4",
     "eslint": "8.26.0",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-html": "7.1.0",
@@ -29,10 +25,16 @@
     "eslint-plugin-mocha": "10.1.0",
     "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-react": "7.31.10",
-    "eslint-plugin-simple-import-sort": "8.0.0"
+    "eslint-plugin-simple-import-sort": "8.0.0",
+    "nodemon": "^2.0.20",
+    "typescript": "^4.8.4"
   },
   "dependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.41.0",
+    "@typescript-eslint/parser": "^5.41.0",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "prettier": "^2.7.1",
+    "rxjs": "^7.5.7"
   }
 }
